examples/failing/DoNotSuggestComposition2.purs
module DoNotSuggestComposition2 where

foo = let x = { y: 3 } in x 2
